--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3442,6 +3442,7 @@ div#mCSB_1_container{
 
 .processing-block-two .inner-box .icon-box img{
   display: inline-block;
+  padding: 50px;
 }
 
 .processing-block-two .inner-box h3{
